jewels of mongolia new date

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -219,13 +219,13 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>10<sup>th</sup> of June, 2016</p>
+                    <p>16<sup>th</sup> of June, 2016</p>
                 </td>
                 <td>
-                    <p>19<sup>th</sup> of June, 2016</p>
+                    <p>25<sup>th</sup> of June, 2016</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>Min-2, Max-18</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -545,13 +545,13 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>17<sup>th</sup> of July, 2016</p>
+                    <p>16<sup>th</sup> of July, 2016</p>
                 </td>
                 <td>
-                    <p>26<sup>th</sup> of July, 2016</p>
+                    <p>25<sup>th</sup> of July, 2016</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>Min-2, Max-18</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -950,6 +950,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>10</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>4<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>13<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>Min-2, Max-18</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>11</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>19<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>Min-2, Max-18</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -1126,6 +1184,35 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>6</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>6<sup>th</sup> of September, 2016</p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of September, 2016</p>
+                </td>
+                <td>
+                    <p>Min-2, Max-18</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
