Joanne Kelley, from USA

--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -7,6 +7,22 @@
 
 <div class="frame_quote"><blockquote>
     <p>
+        <em>I'm doing well, and as far as sharing feedback about the FAM, and
+            Mongolia, I had a fabulous time!  It was one of the best organized trips
+            I've been on, our guide Bulgaa was excellent!  Any time, any one, had
+            any questions or requests, she was there on the spot.  The experience of
+            sleeping in gers was super!  Donna & I were able to upgrade to en suite
+            at two locations, which was very convenient. Everything we saw and did
+            was very educational and enjoyable.  The Ramada personnel were also
+            great. I had a fabulous time.  Thank you for allowing me to participate!
+            </em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Joanne Kelley, from USA</strong></span></p>
+</blockquote>
+</div>
+
+<div class="frame_quote"><blockquote>
+    <p>
         <em>Travel All Mongolia put on an excellent tour, well organized with
             comfortable vehicles, functional & comfortable Ger camps, and a very
             knowledgeable and personable guide whose love for her country shows.  We
