--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -18,6 +18,7 @@
         <nav id="topmenu" class="clearfix" style="padding-top: 30px;">
             <ul class="dropdown">
                 <li class="menu-level-0 current-menu-ancestor"><a href="{{ path('homepage') }}"><span>Home</span></a></li>
+                <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'trip-calendar-2016'}) }}"><span>Trip calendar</span></a></li>
                 <li class="menu-level-0"><a href="{{ path('page_show', {'slug':'about-mongolia'}) }}"><span>About Mongolia</span></a>
                     <ul class="submenu-1">
