--- a/resources/views/Tour/winter-festival-tour.html.twig
+++ b/resources/views/Tour/winter-festival-tour.html.twig
@@ -178,7 +178,9 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span>Privately on Request</span>
+                        <b style="color: #B28E1B">Price:</b> <span>$2385</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
                         <br/>
                     </div>
                     <!--/ widget_categories -->
