--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -43,10 +43,10 @@
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}"><img src="/images/featured_thumb_gobi.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'horse-riding-in-central-part-of-mongolia'}) }}">Horse riding in central part of Mongolia <br/>(14 days, 13 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'horse-riding-in-central-part-of-mongolia'}) }}"><img src="/images/featured_thumb_karakorum.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">Overland Discovery <br/>(15 days, 14 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}"><img src="/images/featured_thumb_overlandoverland-discovery-with-rural-naadam-festival.jpg" alt=""></a></div>
                                     </li>
-                                </ul>
+                                </ul>overland-discovery
                             </div>
                             <!--/ widget latest entries from category -->
                         </li>
@@ -79,8 +79,8 @@
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}"><img src="/images/featured_thumb_naadam.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'khuvsgul-lake-tour'}) }}">Khuvsgul lake tour<br/>(6 days, 5 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'khuvsgul-lake-tour'}) }}"><img src="/images/featured_thumb_turtle.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}">Overland discovery with rural Naadam festival<br/>(16 days, 15 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'overland-discovery-with-rural-naadam-festival'}) }}"><img src="/images/featured_thumb_overland_naadam.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'luxury-tour-with-naadam-festival'}) }}">Luxury tour with Naadam festival<br/>(12 days, 11 nights)</a></div>
