--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -117,6 +117,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">Overland Discovery</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of May, 2016</p>
+                </td>
+                <td>
+                    <p>29<sup>th</sup> of May, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -293,6 +322,35 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>6</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">Overland Discovery</a></p>
+                </td>
+                <td>
+                    <p>12<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>26<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
@@ -653,6 +711,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>12</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">Overland Discovery</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>29<sup>th</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -1008,6 +1095,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>12</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">Overland Discovery</a></p>
+                </td>
+                <td>
+                    <p>7<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>21<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -1213,6 +1329,35 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>7</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">Overland Discovery</a></p>
+                </td>
+                <td>
+                    <p>4<sup>th</sup> of September, 2016</p>
+                </td>
+                <td>
+                    <p>18<sup>th</sup> of September, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'overland-discovery' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
