--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -131,6 +131,7 @@
                     <li><a href="{{ path('homepage') }}"><span>Home</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'about-us'}) }}"><span>About us</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
+                    <li><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'terms-and-conditions'}) }}"><span>Terms & Conditions</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'privacy-policy'}) }}"><span>Privacy Statement</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'frequently-asked-questions'}) }}"><span>F.A.Q.</span></a></li>
