--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -414,6 +414,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>9</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">Western, Southern and Northern Mongolia Expedition</a></p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>25<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>10</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">Western, Southern and Northern Mongolia Expedition</a></p>
+                </td>
+                <td>
+                    <p>17<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>2<sup>nd</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -856,6 +914,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>15</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">Western, Southern and Northern Mongolia Expedition</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>30<sup>th</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>9</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">Western, Southern and Northern Mongolia Expedition</a></p>
+                </td>
+                <td>
+                    <p>22<sup>th</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>31<sup>th</sup> of July, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -1271,7 +1387,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>7</p>
+                    <p>14</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'ultimate-mongolia' }) }}">Ultimate Mongolia</a></p>
@@ -1293,6 +1409,64 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'ultimate-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>15</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">Western, Southern and Northern Mongolia Expedition</a></p>
+                </td>
+                <td>
+                    <p>5<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>20<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>16</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">Western, Southern and Northern Mongolia Expedition</a></p>
+                </td>
+                <td>
+                    <p>20<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>4<sup>th</sup> of September, 2016</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
