--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -90,6 +90,7 @@
         <em>    Overall, Travel All Mongolia did an excellent job providing top quality service that allowed me to thoroughly enjoy this beautiful country without having to worry about logistics. Our guide handled everything flawlessly! The drivers were awesome. I hope to come back in the near future and spend more time exploring. </em></p>
     <p>
         <span style="color:#8b4513;"><strong>Kerina Rowley, USA</strong></span></p>
+    <p><img src="/images/Kerina 1.jpg" alt="Kerina"><img src="/images/Kerina 2.jpg" alt="Kerina"></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
