--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -112,6 +112,7 @@
         <em>Mongolia is a beautiful country located in the Central Asian grasslands called the Steppes. It is a land-locked country, sandwiched between Russia and China. The wide open spaces and the friendliness of the people will leave you nostalgic for a land of extensive peacefulness and vastness, long after your visit. Mongolia is worth the visit, and Mongolian Journeys is your best bet at getting your money worth seeing this gorgeous land.</em></p>
     <p>
         <strong><span style="color:#8b4513;">Jack Perera Elkridge, Maryland, USA</span></strong></p>
+    <p><img src="/images/Jack 2.jpg" alt="Jack" width="203px"><img src="/images/Jack 1.jpg" alt="Jack" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
