--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -51,6 +51,7 @@
         <em>It is truly an experience, to be with the family. Very impressed with what the desert had to offer. The kids were always up for the adventures planned for us. We were always surrounded by nice people, good food and AMAZING scenery. Quite a family destination. From this experience makes us want to come back Mongolia, again and again and again. </em></p>
     <p>
         <span style="color:#8b4513;"><strong>Adam Singer family, USA</strong></span></p>
+    <p><img src="/images/Adam 1.jpg" alt="Adam"><img src="/images/Adam 2.jpg" alt="Adam" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
