--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -51,7 +51,7 @@
         <em>It is truly an experience, to be with the family. Very impressed with what the desert had to offer. The kids were always up for the adventures planned for us. We were always surrounded by nice people, good food and AMAZING scenery. Quite a family destination. From this experience makes us want to come back Mongolia, again and again and again. </em></p>
     <p>
         <span style="color:#8b4513;"><strong>Adam Singer family, USA</strong></span></p>
-    <p><img src="/images/Adam 1.jpg" alt="Adam"><img src="/images/Adam 2.jpg" alt="Adam" style="margin-left: 10px;"></p>
+    <p><img src="/images/Adam 1.jpg" alt="Adam"><img src="/images/adam 2.jpg" alt="Adam" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
@@ -59,6 +59,7 @@
         <em>I was looking for an escorted trip that would show me the highlights of Mongolia in an authentic way, and Travel All Mongolia hit the spot. They're the only 100% Mongolian owned and operated tour operator there, and no matter where I wanted to go, they were accommodating and helpful. They are true "aficionados" of the destination and have a great network of resources all over the country. Thank you Soyoloo, Travel All Mongolia, for a wonderful trip!</em></p>
     <p>
         <span style="color:#8b4513;"><strong>Rachel Haile, USA</strong></span></p>
+    <p><img src="/images/Rachel Haile.jpg" alt="Rachel Haile"></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
