Western, Southern and Northern Mongolia Expedition

--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -26,7 +26,7 @@
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-visa'}) }}"><span>Mongolian visa</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'travel-accommodations'}) }}"><span>Travel accommodations</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'trip-calendar-2016'}) }}"><span>Trip calendar 2016</span></a></li>
-                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
+western-southern-and-northern-mongolia-expedition                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
                     </ul>
                 </li>
                 <li class="menu-level-0 mega-nav"><a href="#"><span>TOURS</span></a>
@@ -40,8 +40,8 @@
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival'}) }}"><img src="/images/featured_thumb_classic_naadam.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">Gobi Desert tour <br/>(7 days, 6 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}"><img src="/images/featured_thumb_gobi.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'western-southern-and-northern-mongolia-expedition'}) }}">Western, Southern and Northern Mongolia Expedition <br/>(16 days, 15 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'western-southern-and-northern-mongolia-expedition'}) }}"><img src="/images/featured_thumb_west.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'overland-discovery'}) }}">Overland Discovery <br/>(15 days, 14 nights)</a></div>
