--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -81,6 +81,7 @@
         the best to you and yours.</em></p>
     <p>
         <span style="color:#8b4513;"><strong>Luisa Lu, Group from USA</strong></span></p>
+    <p><img src="/images/Luisa.jpg" alt="Luisa"></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
