--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -26,7 +26,7 @@
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-visa'}) }}"><span>Mongolian visa</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'travel-accommodations'}) }}"><span>Travel accommodations</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'trip-calendar-2016'}) }}"><span>Trip calendar 2016</span></a></li>
-western-southern-and-northern-mongolia-expedition                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
+                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
                     </ul>
                 </li>
                 <li class="menu-level-0 mega-nav"><a href="#"><span>TOURS</span></a>
