--- a/resources/views/Content/tourist-events.html
+++ b/resources/views/Content/tourist-events.html
@@ -36,4 +36,4 @@
 <p>&nbsp;</p>
 <h2><img src="/images/tsagaansar_1.jpg" alt="Mongolian Adventure Tours" /><img src="/images/tsagaansar_2.jpg" alt="Mongolian Adventure Tours" /><img src="/images/tsagaansar_3.jpg" alt="Mongolian Adventure Tours" /></h2>
 
-<style type="text/css">.blog-content-entry{font-size: 16px;}</style>
+<style type="text/css">.blog-content-entry{font-size: 16px !important;}</style>
