--- a/resources/views/Page/tours.html.twig
+++ b/resources/views/Page/tours.html.twig
@@ -23,8 +23,27 @@
     <div class="middle_row row_light_gray">
         <div class="container clearfix">
             <!-- special offer -->
-            <div class="special_offers">
-                {% for slug, tour in tours if tour.duration2 is defined %}
+            <div class="">
+                {% for slug, tour in tours if tour.duration2 is defined and loop.index < tours|length / 2 %}
+                    <div class="special_item">
+                        <div class="special_image">
+                            <a href="{{ path('tour_show', {'slug' : slug}) }}"><img src="/images/special_offer_naadam.jpg" alt="{{ tour.name }}"></a>
+                        </div>
+                        <div class="special_text">
+                            <h3><a href="{{ path('tour_show', {'slug' : slug}) }}">{{ tour.name }}</a></h3>
+                            <div class="info_row"><span>DURATION:</span> {{ tour.duration2 }}</div>
+                            {% if tour.price_int is defined and tour.price_int is not null %}
+                            <div class="info_row"><span>PRICE FROM:</span> ${{ tour.price_int }}</div>
+                            {% endif %}
+                            <div class="special_price"><a href="{{ path('tour_show', {'slug' : slug}) }}">VIEW DETAILS</a></div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <!--/ special offer -->
+            <!-- special offer -->
+            <div class="">
+                {% for slug, tour in tours if tour.duration2 is defined and loop.index >= tours|length / 2 %}
                     <div class="special_item">
                         <div class="special_image">
                             <a href="{{ path('tour_show', {'slug' : slug}) }}"><img src="/images/special_offer_naadam.jpg" alt="{{ tour.name }}"></a>
